# ecg-pulse-ptbxl-thesis

./: .gitignore  README.md  REPRODUCE.md  WINDOWS_SETUP.md  build_stage2_dataset.py  pyproject.toml
khoaluan/: .gitignore  DEFENSE_EVIDENCE.md  STATUS_RESULTS.md  THESIS_STYLE_GUIDE.md  eval_abl_results.json  method-spec.md  super5_base.json  super5_ours.json
khoaluan/checks/: check_method_spec.py  check_paper.py  check_references.py  check_teacher_forced.py  check_v2_code.py
khoaluan/code/: COLAB_ABLATION.md  SUPER5_RUNBOOK.md  __init__.py  aggregate_super5.py  build_3task_json.py  build_dataset.py  collect_eval_images.py  eval_v2.py  infer_aslgen.py  labels.py  pipeline.py  prompts.py  rerender_images_noid_colab.ipynb  scp_tasks.py  teacher_forced.py  train_v2.py  weighted_ce.py
khoaluan/paper/: fable promtp.md  paper.typ  refs.bib
khoaluan/thesis/: CONG_THUC_GIAI_THICH.md  _fig31.typ  _fig32.typ  _fig_arch.typ  _fig_ecgbench.typ  _fig_ecginstruct.typ  _fig_fusion.typ  _fig_tiling.typ  main.typ
preprocessing_pipeline/: run_build_abnormal_ptbxl_test_set.py  run_preprocessing.py  run_pulse_chat.py  run_pulse_ptbxl_inference.py
preprocessing_pipeline/config/: preprocessing_config.py  training_config.py
preprocessing_pipeline/evaluation/: metrics.py  run_benchmark.py
preprocessing_pipeline/model/: anyres_tiler.py  ecg_llava.py  mlp_projector.py  qlora_config.py  vision_encoder.py
tests/: conftest.py  test_asl_gen_loss.py  test_pulse_asl_collator.py  test_pulse_inference_parser.py  test_pulse_ptbxl_dataset_builder.py  test_run_pulse_ptbxl_inference_smoke.py
(+29 files in other folders)
